3.x/pt-br/SUMMARY.md
# Sumário

* [Documentação do Chamilo 3.0](README.md)

## Guia do Professor

* [Guia do Professor](teacher-guide/README.md)
  * [Primeiros Passos](teacher-guide/getting-started/README.md)
    * [Compreendendo a Interface](teacher-guide/getting-started/understanding-the-interface.md)
    * [Seu Perfil](teacher-guide/getting-started/your-profile.md)
  * [Criando Seu Curso](teacher-guide/creating-your-course/README.md)
    * [Configurações do Curso](teacher-guide/creating-your-course/course-settings.md)
    * [Página Inicial do Curso](teacher-guide/creating-your-course/course-homepage.md)
    * [Descrição do Curso](teacher-guide/creating-your-course/course-description.md)
  * [Adicionando Conteúdo](teacher-guide/adding-content/README.md)
    * [Documentos](teacher-guide/adding-content/documents.md)
    * [Links](teacher-guide/adding-content/links.md)
    * [Percursos de Aprendizagem](teacher-guide/adding-content/learning-paths.md)
    * [Glossário](teacher-guide/adding-content/glossary.md)
    * [Anúncios](teacher-guide/adding-content/announcements.md)
    * [Fórmulas Matemáticas](teacher-guide/adding-content/math-formulas.md)
    * [Conteúdo Multilíngue](teacher-guide/adding-content/multi-language-content.md)
  * [Avaliando os Alunos](teacher-guide/assessing-learners/README.md)
    * [Inscrevendo Usuários](teacher-guide/assessing-learners/subscribing-users.md)
    * [Exercícios](teacher-guide/assessing-learners/exercises.md)
    * [Tarefas](teacher-guide/assessing-learners/assignments.md)
    * [Pesquisas](teacher-guide/assessing-learners/surveys.md)
    * [Frequência](teacher-guide/assessing-learners/attendance.md)
    * [Boletim](teacher-guide/assessing-learners/gradebook.md)
  * [Colaboração e Comunicação](teacher-guide/collaboration-and-communication/README.md)
    * [Fóruns](teacher-guide/collaboration-and-communication/forums.md)
    * [Chat](teacher-guide/collaboration-and-communication/chat.md)
    * [Grupos](teacher-guide/collaboration-and-communication/groups.md)
    * [Wiki](teacher-guide/collaboration-and-communication/wiki.md)
    * [Blog](teacher-guide/collaboration-and-communication/blog.md)
    * [Videoconferência](teacher-guide/collaboration-and-communication/video-conferencing.md)
  * [Acompanhamento e Relatórios](teacher-guide/tracking-and-reporting/README.md)
    * [Acompanhamento do Aluno](teacher-guide/tracking-and-reporting/learner-tracking.md)
    * [Relatórios do Curso](teacher-guide/tracking-and-reporting/course-reports.md)
    * [Certificados e Competências](teacher-guide/tracking-and-reporting/certificates-and-skills.md)
  * [Ferramentas de IA](teacher-guide/ai-tools/README.md)
    * [Tutor de IA](teacher-guide/ai-tools/ai-tutor.md)
    * [Gerador de Exercícios](teacher-guide/ai-tools/exercise-generator.md)
    * [Gerador de Percursos de Aprendizagem](teacher-guide/ai-tools/learning-path-generator.md)
    * [Correção com IA](teacher-guide/ai-tools/ai-grading.md)
    * [Gerador de Termos do Glossário](teacher-guide/ai-tools/glossary-generator.md)
    * [Geração de Mídia com IA](teacher-guide/ai-tools/ai-media-generation.md)
    * [Gerador de Imagem do Curso](teacher-guide/ai-tools/course-picture-generator.md)
  * [Ferramentas Adicionais](teacher-guide/additional-tools/README.md)
    * [Agenda](teacher-guide/additional-tools/agenda.md)
    * [Caderno](teacher-guide/additional-tools/notebook.md)
    * [Dropbox](teacher-guide/additional-tools/dropbox.md)
    * [Portfólio](teacher-guide/additional-tools/portfolio.md)
    * [Progresso do Curso](teacher-guide/additional-tools/course-progress.md)
  * [Plugins](teacher-guide/plugins/README.md)
    * [Exercício Focado](teacher-guide/plugins/exercise-focused.md)
    * [Monitoramento de Exercícios](teacher-guide/plugins/exercise-monitoring.md)
    * [Assinatura de Exercício](teacher-guide/plugins/exercise-signature.md)
    * [Avaliação de Opções de Questão](teacher-guide/plugins/question-options-evaluation.md)
    * [Posicionamento](teacher-guide/plugins/positioning.md)
    * [Teste para PDF](teacher-guide/plugins/test-to-pdf.md)
    * [Editor de Conteúdo C-Studio](teacher-guide/plugins/cstudio.md)
    * [Importação H5P](teacher-guide/plugins/h5p-import.md)
    * [Notificar na Página Inicial do Curso](teacher-guide/plugins/notify-in-course-home.md)
    * [Certificado Personalizado](teacher-guide/plugins/custom-certificate.md)
    * [Acordo Legal do Curso](teacher-guide/plugins/course-legal-agreement.md)
    * [Acompanhamento do Aluno](teacher-guide/plugins/student-follow-up.md)
    * [Calendário de Aprendizagem](teacher-guide/plugins/learning-calendar.md)
    * [Anotações do Professor](teacher-guide/plugins/teacher-notes.md)
    * [Cliente IMS/LTI](teacher-guide/plugins/ims-lti.md)
    * [Provedor LTI 1.3 Advantage](teacher-guide/plugins/lti-1-3-advantage-provider.md)
    * [Exportação de Pesquisa CSV](teacher-guide/plugins/survey-export-csv.md)
    * [Exportação de Pesquisa TXT](teacher-guide/plugins/survey-export-txt.md)
  * [Rede Social](teacher-guide/social-network.md)
  * [Sessões](teacher-guide/sessions.md)
  * [Filiais e Salas](teacher-guide/branches-and-rooms.md)
  * [Tickets de Suporte](teacher-guide/tickets.md)
  * [Apêndice](teacher-guide/appendix/faq.md)
    * [FAQ](teacher-guide/appendix/faq.md)
    * [Glossário](teacher-guide/appendix/glossary.md)

## Guia de Administração

* [Guia de Administração](admin-guide/README.md)
  * [Primeiros Passos](admin-guide/getting-started/README.md)
    * [Visão Geral da Interface de Administração](admin-guide/getting-started/admin-interface-overview.md)
  * [Instalação](admin-guide/installation/README.md)
    * [Requisitos do Servidor](admin-guide/installation/server-requirements.md)
    * [Assistente de Instalação](admin-guide/installation/installation-wizard.md)
    * [Configuração](admin-guide/installation/configuration.md)
    * [Armazenamento em Nuvem](admin-guide/installation/cloud-storage.md)
    * [Configuração de E-mail](admin-guide/installation/email-configuration.md)
    * [Atualização](admin-guide/installation/upgrading.md)
  * [Usuários](admin-guide/users/README.md)
    * [Papéis de Usuário](admin-guide/users/user-roles.md)
    * [Gerenciamento de Usuários](admin-guide/users/managing-users.md)
    * [Grupos de Usuários](admin-guide/users/user-groups.md)
    * [Perfilamento de Usuários](admin-guide/users/user-profiling.md)
  * [Cursos](admin-guide/courses/README.md)
    * [Gerenciamento de Cursos](admin-guide/courses/managing-courses.md)
    * [Categorias de Cursos](admin-guide/courses/course-categories.md)
    * [Importação e Exportação de Cursos](admin-guide/courses/course-import-export.md)
  * [Sessões](admin-guide/sessions/README.md)
    * [Gerenciamento de Sessões](admin-guide/sessions/managing-sessions.md)
    * [Categorias de Sessões](admin-guide/sessions/session-categories.md)
    * [Carreiras e Promoções](admin-guide/sessions/careers-and-promotions.md)
    * [Turmas](admin-guide/sessions/classes.md)
  * [Plataforma](admin-guide/platform/README.md)
    * [Idiomas](admin-guide/platform/languages.md)
    * [Notícias do Portal](admin-guide/platform/portal-news.md)
    * [Agenda Global](admin-guide/platform/global-agenda.md)
    * [Páginas](admin-guide/platform/pages.md)
    * [Ferramentas da Plataforma](admin-guide/platform/platform-tools.md)
  * [Configurações da Plataforma](admin-guide/platform-settings/README.md)
    * [Identidade do Administrador](admin-guide/platform-settings/admin-settings.md)
    * [Agenda](admin-guide/platform-settings/agenda-settings.md)
    * [Assistentes de IA](admin-guide/platform-settings/ai-helpers-settings.md)
    * [Anúncios](admin-guide/platform-settings/announcement-settings.md)
    * [Tarefas (Work)](admin-guide/platform-settings/work-settings.md)
    * [Frequência](admin-guide/platform-settings/attendance-settings.md)
    * [CAS (legado)](admin-guide/platform-settings/cas-settings.md)
    * [Certificados](admin-guide/platform-settings/certificate-settings.md)
    * [Chat](admin-guide/platform-settings/chat-settings.md)
    * [Curso](admin-guide/platform-settings/course-settings.md)
    * [Catálogo de Cursos](admin-guide/platform-settings/catalog-settings.md)
    * [Tarefas Cron](admin-guide/platform-settings/crons-settings.md)
    * [Exibição](admin-guide/platform-settings/display-settings.md)
    * [Documentos](admin-guide/platform-settings/document-settings.md)
    * [Dropbox](admin-guide/platform-settings/dropbox-settings.md)
    * [Editor](admin-guide/platform-settings/editor-settings.md)
    * [Exercícios (Testes)](admin-guide/platform-settings/exercise-settings.md)
    * [Fóruns](admin-guide/platform-settings/forum-settings.md)
    * [Glossário](admin-guide/platform-settings/glossary-settings.md)
    * [Boletim (Avaliações)](admin-guide/platform-settings/gradebook-settings.md)
    * [Grupos](admin-guide/platform-settings/group-settings.md)
    * [Idiomas](admin-guide/platform-settings/language-settings.md)
    * [Percursos de Aprendizagem](admin-guide/platform-settings/lp-settings.md)
    * [E-mail](admin-guide/platform-settings/mail-settings.md)
    * [Mensagens](admin-guide/platform-settings/message-settings.md)
    * [Plataforma](admin-guide/platform-settings/platform-settings.md)
    * [Privacidade](admin-guide/platform-settings/privacy-settings.md)
    * [Cadastro](admin-guide/platform-settings/registration-settings.md)
    * [Busca](admin-guide/platform-settings/search-settings.md)
    * [Segurança](admin-guide/platform-settings/security-settings.md)
    * [Sessões](admin-guide/platform-settings/session-settings.md)
    * [Competências](admin-guide/platform-settings/skill-settings.md)
    * [Rede Social](admin-guide/platform-settings/social-settings.md)
    * [Pesquisas](admin-guide/platform-settings/survey-settings.md)
    * [Tickets](admin-guide/platform-settings/ticket-settings.md)
    * [Acompanhamento](admin-guide/platform-settings/tracking-settings.md)
    * [Perfil do Usuário](admin-guide/platform-settings/profile-settings.md)
    * [Web Services](admin-guide/platform-settings/webservice-settings.md)
    * [Fluxos de Trabalho](admin-guide/platform-settings/workflows-settings.md)
  * [Analítica](admin-guide/analytics/README.md)
    * [Estatísticas Globais](admin-guide/analytics/global-statistics.md)
    * [Catálogo de Relatórios](admin-guide/analytics/reports-catalog.md)
    * [Analítica de Aprendizagem](admin-guide/analytics/learning-analytics.md)
    * [Relatórios Corporativos](admin-guide/analytics/corporate-reports.md)
    * [Tickets](admin-guide/analytics/tickets.md)
  * [Competências](admin-guide/skills/README.md)
    * [Gerenciamento de Competências](admin-guide/skills/managing-skills.md)
    * [Roda de Competências](admin-guide/skills/skills-wheel.md)
    * [Ranking de Competências](admin-guide/skills/skills-ranking.md)
    * [Competências e Avaliações](admin-guide/skills/skills-assessments.md)
  * [Sistema](admin-guide/system/README.md)
    * [Ferramentas do Sistema](admin-guide/system/system-tools.md)
    * [Identidade Visual](admin-guide/system/branding/README.md)
      * [Temas de Cores](admin-guide/system/branding/color-themes.md)
      * [Personalização do Portal](admin-guide/system/branding/portal-customization.md)
      * [Modelos](admin-guide/system/branding/templates.md)
  * [Salas](admin-guide/rooms/README.md)
    * [Gerenciamento de Salas](admin-guide/rooms/managing-rooms.md)
    * [Localizador de Disponibilidade de Salas](admin-guide/rooms/room-availability-finder.md)
  * [Segurança](admin-guide/security/README.md)
    * [Auditoria de Atividades](admin-guide/security/activities-audit.md)
    * [Tentativas de Login](admin-guide/security/login-attempts.md)
    * [IDS Simples](admin-guide/security/simple-ids.md)
    * [Verificador de Força de Senha](admin-guide/security/password-strength-checker.md)
    * [Integridade de Arquivos](admin-guide/security/file-integrity.md)
  * [Plugins](admin-guide/plugins/README.md)
    * [Gerenciamento de Plugins](admin-guide/plugins/managing-plugins.md)
  * [Verificação de Saúde](admin-guide/health-check.md)
  * [Outros Blocos de Administração](admin-guide/other-admin-blocks/README.md)
    * [Links do Chamilo.org](admin-guide/other-admin-blocks/chamilo-org-links.md)
    * [Verificação de Versão](admin-guide/other-admin-blocks/version-check.md)
    * [Suporte Profissional](admin-guide/other-admin-blocks/professional-support.md)
    * [Notícias do Chamilo](admin-guide/other-admin-blocks/news-from-chamilo.md)
  * [Autenticação](admin-guide/authentication/README.md)
    * [OAuth2](admin-guide/authentication/oauth2.md)
    * [Azure Entra ID](admin-guide/authentication/azure-entra-id.md)
    * [LDAP](admin-guide/authentication/ldap.md)
    * [CAS](admin-guide/authentication/cas.md)
    * [SCIM](admin-guide/authentication/scim.md)
    * [Configuração de SSO](admin-guide/authentication/sso-configuration.md)
  * [Integrações](admin-guide/integrations/README.md)
    * [Videoconferência](admin-guide/integrations/video-conferencing.md)
    * [LTI 1.3](admin-guide/integrations/lti.md)
    * [xAPI](admin-guide/integrations/xapi.md)
    * [OnlyOffice](admin-guide/integrations/onlyoffice.md)
    * [Configuração de IA](admin-guide/integrations/ai-configuration.md)
  * [Multi-URL](admin-guide/multi-url/README.md)
    * [URLs de Acesso](admin-guide/multi-url/access-urls.md)
  * [Ajuste de Desempenho](admin-guide/performance-tuning.md)
  * [Manutenção](admin-guide/maintenance/README.md)
    * [Backups](admin-guide/maintenance/backups.md)
    * [Status do Sistema](admin-guide/maintenance/system-status.md)
    * [Limpeza de Arquivo](admin-guide/maintenance/archive-cleanup.md)
  * [MCP](admin-guide/mcp.md)
  * [Apêndice](admin-guide/appendix/faq.md)
    * [FAQ](admin-guide/appendix/faq.md)
    * [Guia de Segurança](admin-guide/appendix/security-guide.md)
    * [Glossário](admin-guide/appendix/glossary.md)

## Guia do Estudante

* [Guia do Estudante](student-guide/README.md)
  * [Primeiros Passos](student-guide/getting-started/README.md)
    * [Criando uma Conta](student-guide/getting-started/creating-an-account.md)
    * [Entendendo a Interface](student-guide/getting-started/understanding-the-interface.md)
  * [Cursos](student-guide/courses/README.md)
    * [Inscrevendo-se em um Curso](student-guide/courses/subscribing-to-a-course.md)
    * [Orientando-se em um Curso](student-guide/courses/course-tools-overview.md)
    * [Seguindo um Percurso de Aprendizagem](student-guide/courses/following-a-learning-path.md)
    * [Realizando Testes](student-guide/courses/taking-tests.md)
    * [Enviando uma Tarefa](student-guide/courses/submitting-an-assignment.md)
    * [Usando o Fórum](student-guide/courses/using-the-forum.md)
    * [Usando a Ferramenta de Chat](student-guide/courses/using-the-chat-tool.md)
    * [Chatbot de Tutor de IA](student-guide/courses/ai-tutor.md)
  * [Caixa de Entrada](student-guide/inbox.md)
  * [Rede Social](student-guide/social-network.md)
  * [Meu Progresso](student-guide/my-progress.md)
  * [Conta e Segurança](student-guide/account-and-security/README.md)
    * [Redefinindo Sua Senha](student-guide/account-and-security/resetting-your-password.md)
    * [Autenticação de Dois Fatores](student-guide/account-and-security/two-factor-authentication.md)
    * [CAPTCHA](student-guide/account-and-security/captcha.md)
  * [Apêndice](student-guide/appendix/faq.md)
    * [FAQ](student-guide/appendix/faq.md)
    * [Glossário](student-guide/appendix/glossary.md)

## Guia do Desenvolvedor

* [Guia do Desenvolvedor](developer-guide/README.md)
  * [Primeiros Passos](developer-guide/getting-started/README.md)
    * [Tech Stack](developer-guide/getting-started/tech-stack.md)
    * [Configuração de Desenvolvimento](developer-guide/getting-started/development-setup.md)
    * [Estrutura do Projeto](developer-guide/getting-started/project-structure.md)
  * [Backend](developer-guide/backend/README.md)
    * [Arquitetura Symfony](developer-guide/backend/symfony-architecture.md)
    * [Entidades e Doctrine](developer-guide/backend/entities-and-doctrine.md)
    * [Sistema de Recursos](developer-guide/backend/resource-system.md)
    * [Controllers](developer-guide/backend/controllers.md)
    * [Eventos e Listeners](developer-guide/backend/events-and-listeners.md)
    * [Sistema de Configurações](developer-guide/backend/settings-system.md)
  * [API](developer-guide/api/README.md)
    * [Autenticação](developer-guide/api/authentication.md)
    * [Referência de Endpoints](developer-guide/api/endpoints-reference.md)
    * [Ações Personalizadas](developer-guide/api/custom-actions.md)
    * [Webhooks](developer-guide/api/webhooks.md)
  * [Frontend](developer-guide/frontend/README.md)
    * [Componentes Vue](developer-guide/frontend/vue-components.md)
    * [Views e Roteamento](developer-guide/frontend/views-and-routing.md)
    * [Gerenciamento de Estado](developer-guide/frontend/state-management.md)
    * [Sistema de Build](developer-guide/frontend/build-system.md)
  * [Temas](developer-guide/theming/README.md)
    * [Temas de Cores](developer-guide/theming/color-themes.md)
    * [CSS e Tailwind](developer-guide/theming/css-and-tailwind.md)
    * [Templates Twig](developer-guide/theming/twig-templates.md)
  * [Plugins](developer-guide/plugins/README.md)
    * [Arquitetura de Plugins](developer-guide/plugins/plugin-architecture.md)
    * [Criando um Plugin](developer-guide/plugins/creating-a-plugin.md)
    * [Plugins de Ferramentas de Curso](developer-guide/plugins/course-tool-plugins.md)
  * [Contribuindo](developer-guide/contributing/README.md)
    * [Convenções de Codificação](developer-guide/contributing/coding-conventions.md)
    * [Fluxo de Trabalho Git](developer-guide/contributing/git-workflow.md)
    * [Testes](developer-guide/contributing/testing.md)
  * [Apêndice](developer-guide/appendix/database-schema.md)
    * [Esquema do Banco de Dados](developer-guide/appendix/database-schema.md)
    * [Glossário](developer-guide/appendix/glossary.md)

## Sobre Esta Documentação

* [Changelog](CHANGELOG.md)